# trabalho-so

./: .gitignore  README.md  descricao.txt  pyproject.toml
parte-2/: Controller.py  aplication.py  controller.py  grafico_gantt.html  main.py  models.py
parte-2/meu-projeto-react/: package.json
parte-2/meu-projeto-react/public/: index.html
parte-2/meu-projeto-react/src/: App.css  App.js  index.css
parte-2/service/: edf.py  fifo.py  plotagem.py  processos_modelo.py  rr.py  sjf.py
parte1/: main.py
