[tool.poetry]
name = "trabalho-so"
version = "0.1.0"
description = ""
authors = ["emal@gml.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
isort = "^5.13.2"
fastapi = "^0.112.2"
bokeh = "^3.5.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
